Sugati/src/objects/Margin__c.object
<CustomObject>
    <fields>
        <fullName>M_Book_From__c</fullName>
        <label>Book From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Book_To__c</fullName>
        <label>Book To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Margins</relationshipLabel>
        <relationshipName>Margins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>M_Margin__c</fullName>
        <label>Margin</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_Travel_From__c</fullName>
        <label>Travel From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Travel_To__c</fullName>
        <label>Travel To</label>
        <type>Date</type>
    </fields>
    <label>Margin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>M_Country__c</columns>
        <columns>M_Margin__c</columns>
        <columns>M_Book_From__c</columns>
        <columns>M_Book_To__c</columns>
        <columns>M_Travel_From__c</columns>
        <columns>M_Travel_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>